# Tensorrtx_yolov5_resnet18

./: CMakeLists.txt  README.md  main.cpp
engine/: engine_config.yaml
yolov5/: CMakeLists.txt  common.hpp  logging.h  preprocess.cu  resnet.h  resnet18.cpp  utils.h  yololayer.h  yolov5_predictor.cpp  yolov5_predictor.h
